--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.application'
 
 android {
-    namespace "org.vosk.demo"
+    namespace "com.example.demo"
     compileSdkVersion 33
     defaultConfig {
-        applicationId "org.vosk.demo"
+        applicationId "com.example.demo"
         minSdkVersion 21
         targetSdkVersion 33
         versionCode 1
@@ -27,8 +27,12 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.3.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'net.java.dev.jna:jna:5.13.0@aar'
     implementation 'com.alphacephei:vosk-android:0.3.47@aar'
     implementation project(':models')
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    implementation("com.android.volley:volley:1.2.1")
 }
