--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,23 @@
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:icon="@drawable/icon"
         android:label="@string/app_name"
+        android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="s">
         <activity
             android:name=".ChatModeActivity"
             android:theme="@style/AppTheme"
             android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".VoiceModeActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".VoskActivity"
-            android:exported="true">
-
         </activity>
     </application>
 
