--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,25 +10,31 @@
     <application
         android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
-        android:icon="@drawable/icon"
+        android:icon="@drawable/voice_icon"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:targetApi="s">
         <activity
-            android:name=".ChatModeActivity"
-            android:theme="@style/AppTheme"
-            android:exported="true">
-
-        </activity>
-        <activity
-            android:name=".VoiceModeActivity"
-            android:exported="true">
+            android:name=".ui.SplashScreen"
+            android:exported="true"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.ChatModeActivity"
+            android:exported="true"
+            android:theme="@style/AppTheme">
+
+        </activity>
+        <activity
+            android:name=".ui.VoiceModeActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
